--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,52 @@
     <meta name="description" content="An example web page built in Web Skills class">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+      body{
+        background-color:#4A547F;
+        font-family: Garamond, Georgia, serif;
+      }
+        #container{
+          background-color: white;
+          width:500px;
+          margin-left: auto;
+          margin-right: auto;
+          border: 3px solid #333333;
+          padding: 15px;
+        } 
+        h1{
+          font-size: 60px;
+          text-align: center;
+          margin: 0;
+        }
+        h2{
+          text-align: center;
+        }
+        ul{
+          background-color: #939CBF;
+          text-align: center;
+          padding:10px;
+        }
+        li{
+          display:inline;
+          padding: 10px;
+        }
+        li:hover{
+          background-color: white;
+          font-weight: bold;
+         }
+         #home:hover{
+          background-color: yellow;
+          color: red;
+         } 
+         .quote{
+          margin:30px;
+          font-style: italic;
+          font-family: helvetica, arial, serif
+          Line-height:20px;
+          color: #999999;
+          border-left: 1px solid black
+        
+         }
 
 
     </style>
@@ -14,12 +60,12 @@
   <body>
     <div id="container">
       <header>
-        <h1>Jeremy Rue</h1>
+        <h1>Thess Mostoles</h1>
         <h2>My first web page</h2>
       </header>
       <nav>
         <ul>
-          <li>Home</li>
+          <li id="home">Home</li>
           <li>Blog</li>
           <li>Portfolio</li>
           <li>Contact</li>
